apps/homectl/homectl-next/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homectl-next
  namespace: default
  annotations:
    secret.reloader.stakater.com/reload: "homectl-next-settings"
spec:
  selector:
    matchLabels:
      app: homectl-next
  template:
    metadata:
      labels:
        app: homectl-next
    spec:
      volumes:
        - name: homectl-next-settings
          secret:
            secretName: homectl-next-settings

      containers:
        - name: homectl-server
          image: ghcr.io/fruitiex/homectl-ui:main@sha256:a737df557b1291dceb3820a663c0bb5aa152a121b8d238091123dd838e1c406e
          resources:
            limits:
              memory: 256Mi
              cpu: 500m
          volumeMounts:
            - mountPath: /app/.env
              name: homectl-next-settings
              subPath: .env
