apps/homectl/homectl-next/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homectl-next
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: homectl-next.fruitiex.org,homectl.fruitiex.org
spec:
  type: LoadBalancer
  selector:
    app: homectl-next
  ports:
  - name: homectl-next
    protocol: TCP
    port: 80
    targetPort: 3000
